# magic-bitboards-demo

./: .gitignore  Cargo.toml  README.md
magic-gen/: Cargo.toml
magic-gen/src/: cannon.rs  generate.rs  knight.rs  main.rs  rng.rs  rook.rs  threadpool.rs
types/: Cargo.toml
types/src/: bitboard.rs  square.rs
xq/: Cargo.toml
xq/src/: cannon.rs  generate.rs  king.rs  knight.rs  lib.rs  pawn.rs  rook.rs
